# robotics-vp-core

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLAUDE_TODO.md  CODEX_NEXT_STEPS.md  CODEX_NEXT_STEPS_STAGE_2_2.md  CODEX_NEXT_STEPS_STAGE_2_3.md  DEEP_LEARNING_ARCHITECTURE.md  DEMO_POLICY_README.md  Dockerfile.runpod  ECON_ARCHITECTURE.md  FEASIBILITY_FIX_SUMMARY.md  GPU_README.md  HYDRA_POLICY_NN_TRAINING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_HANDOFF.md  INVESTOR_STORY.md  Makefile  PHASE_A5_FROZEN.md  PHASE_A_STATUS.md  PHASE_B_FROZEN.md  PHASE_B_STATUS.md  PHASE_B_WM_FROZEN.md  PHASE_G_CODEX_IMPLEMENTATION_GUIDE.md  PHASE_G_PIPELINE_DIAGRAMS.md  PHASE_G_SPEC.md  PHASE_G_SUMMARY.md  PHASE_G_VERIFICATION_CHECKLIST.md  PHASE_H_COMPLETION_SUMMARY.md  PHASE_H_INTEGRATION_COMPLETE.md  PHASE_H_QUICK_START.md  PHASE_I_CURRICULUM.md  PHASE_I_HANDOFF_CHECKLIST.md  PHASE_I_IMPLEMENTATION_PLAYBOOK.md  PHASE_I_NEURALIZATION_OVERVIEW.md  PHYSICS_ENV_README.md  QUICK_CHECKS_COMPLETE.md  README.md  ROADMAP_STAGES_2_5.md  (+52 more)
.agent/: auth.md  codex.md  inference_speed.md  mcp.md  sandbox.md  skills.md
artifacts/: state_vs_video_summary.md
checkpoints/: aligned_encoder_train.csv  latent_diffusion_zv.pt  latent_dynamics_horizon_agnostic.pt  latent_dynamics_train.csv  latent_dynamics_trust_aware.pt  offline_augmented_actor.pt  offline_augmented_positive_mpl_actor.pt  offline_augmented_positive_mpl_w10_actor.pt  offline_baseline_actor.pt  offline_trust_weighted_actor.pt  ppo_final.pt  sac_final.pt  trust_net.pt
config/: econ_domains.yaml  observation.yaml  (+4 more)
(+1018 files in other folders)
