[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robotics-vp-economics-model"
version = "0.0.0"
description = "Economics-first robotics stack"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pyyaml",
  "matplotlib",
  "torch",
  "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]
