[metadata]
name = robotics-vp-economics-model
version = 0.0.0
description = Economics-first robotics stack
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.9
include_package_data = False

[options.packages.find]
where = .
include =
    src
    src.*
